--- a/main.tex
+++ b/main.tex
@@ -14,11 +14,17 @@
 \usepackage{parskip}
 
 \usepackage[vcentering,dvips]{geometry}
-\geometry{papersize={7in,9in},bottom=3pc,top=5pc,left=5pc,right=5pc,bmargin=4.5pc,footskip=18pt,headsep=25pt}
-
+\geometry{
+    papersize={7in,9in},
+    bottom=3pc,
+    top=5pc,
+    left=5pc,
+    right=5pc,
+    bmargin=4.5pc,
+    footskip=18pt,
+    headsep=25pt}
 
 \usepackage{subfiles}
-
 
 \usepackage[
   colorlinks=true,
