--- a/notebooks/acceptors_and_transducers.ipynb
+++ b/notebooks/acceptors_and_transducers.ipynb
@@ -53,13 +53,18 @@
    "metadata": {},
    "source": [
     "## Automata\n",
-    "\n",
+    "$\\newcommand{\\vx}{{\\bf x}}\n",
+    "\\newcommand{\\vy}{{\\bf y}}\n",
+    "\\newcommand{\\gA}{\\mathcal{A}}\n",
+    "\\newcommand{\\gT}{\\mathcal{T}}\n",
+    "\\DeclareMathOperator*{\\LSE}{\\textrm{LSE}}\n",
+    "$\n",
     "The broad class of graphs we are going to look at are finite-state automata. These include deterministic finite-state automata (DFAs) and non-deterministic finite-state automata (NFAs). More specifically we will consider a generalization of DFAs and NFAs called weighted finite-state acceptors (WFSAs). That's a mouthful, so I will just call them *acceptors*. We will also consider a further generalization of an acceptor called a *transducer* (weighted finite-state transducers or WFSTs). The following figure shows the relation between these three graphs; transducers, acceptors, and automtata. Transducers are the most expressive in terms of their representational power, followed by acceptors followed by unweighted automata.\n",
     "\n",
     "\n",
     "<div class=\"figure\">\n",
     "  <div class=\"img\">\n",
-    "    <img src=\"figures/wfsa_classes.svg\"/>\n",
+    "    <img src=\"../figures/wfsa_classes.svg\"/>\n",
     "  </div>\n",
     "  <div class=\"caption\" markdown=\"span\">\n",
     "      A hierarchy of automata classes from general to specific in terms of representation power. Weighted transducers can represent anything that weighted acceptors can represent. Weighted acceptors in turn can represent any unweighted finite-state automata.\n",
@@ -70,7 +75,7 @@
     "\n",
     "<div class=\"figure\">\n",
     "  <div class=\"img\">\n",
-    "    <img src=\"figures/nb/simple_automata.svg\"/>\n",
+    "    <img src=\"simple_automata.svg\"/>\n",
     "  </div>\n",
     "  <div class=\"caption\" markdown=\"span\">\n",
     "     An example of a simple finite-state automata.\n",
@@ -147,7 +152,7 @@
     "![simple fsa](figures/nb/simple_fsa.svg)\n",
     "\n",
     "\n",
-    "An accepting path in the graph is a sequence of arcs which begin at a start state and end in an accepting state. By concatenating the labels on an accepting path, we get a string which is accepted by the graph. So the string $aa$ is accepted by the graph by following the state sequence $0 \\rightarrow 2 \\rightarrow 1$. The string $ba$ is also accepted by the graph by following the same state sequence but taking the arc with label $b$ when traversing from state $0$ to state $1$. The language of the acceptor is the set of all strings which are accepted by it. You may also encounter \"recognized\" used as a synonym for \"accepted\". Let the variable $\\mathcal{A}$ represent the above acceptor. In general, I'll use upercase script letters to represent graphs. Let $\\mathcal{L}(\\mathcal{A})$ denote the langauge of $\\mathcal{A}$. In this case $\\mathcal{L}(\\mathcal{A}) = \\{aa, ba\\}$. \n",
+    "An accepting path in the graph is a sequence of arcs which begin at a start state and end in an accepting state. By concatenating the labels on an accepting path, we get a string which is accepted by the graph. So the string $aa$ is accepted by the graph by following the state sequence $0 \\rightarrow 2 \\rightarrow 1$. The string $ba$ is also accepted by the graph by following the same state sequence but taking the arc with label $b$ when traversing from state $0$ to state $1$. The language of the acceptor is the set of all strings which are accepted by it. You may also encounter \"recognized\" used as a synonym for \"accepted\". Let the variable $\\gA$ represent the above acceptor. In general, I'll use upercase script letters to represent graphs. Let $\\mathcal{L}(\\gA)$ denote the langauge of $\\gA$. In this case $\\mathcal{L}(\\gA) = \\{aa, ba\\}$. \n",
     "\n",
     "There are different ways to compute the weight of a string accepted by the graph. The most common is to sum the weights of the arcs on the accepting path for that string. For example the string $aa$ in the above graph has a weight of $0 + 2 = 2$. Another option would be to multiply the weights. These two options correspond to interpreting the weights as either log probabilities or probabilities. We'll have more to say about this later."
    ]
@@ -170,7 +175,6 @@
    "id": "6ced903c",
    "metadata": {},
    "source": [
-    "$\\DeclareMathOperator*{\\LSE}{\\textrm{LSE}}$\n",
     "The below graph accepts the same string by multiple paths. \n",
     "\n",
     "![multi path](figures/nb/multi_path.svg)\n",
@@ -425,7 +429,7 @@
     "\n",
     "Instead of saying that a transducer accepts a given string, we say that it *transduces* one string to another. The above graph transducer the string $ab$ to the string $xz$ and the string $bb$ to the string $yz$. The weights of a transduced pair is computed in the same way as in an acceptor. The scores of the individual arcs on the path are summed. The path scores are combined with *log-sum-exp*. So the weight of the transduced pair $(ab, xz)$ in the above graph is $0+3 = 3$.\n",
     "\n",
-    "We have to generalize concept of the language from an acceptor to a transducer. We'll call this generalization the transduced set, and represent it with the symbol $\\mathcal{T}$. If $T$ is a transducer, then $\\mathcal{T}(T)$ is the set of pairs of strings transduced by $T$. More formally, a pair of strings $(x, y) \\in \\mathcal{T}(T)$ if $T$ transduces $x$ to $y$.\n",
+    "We have to generalize concept of the language from an acceptor to a transducer. I'll call this generalization the transduced set. Since it will always be clear from context if the graph is an acceptor or transducer, I'll use the same symbol $\\mathcal{L}$ to represent the transduced set. If $\\gT$ is a transducer, then $\\mathcal{L}(\\gT)$ is the set of pairs of strings transduced by $\\gT$. More formally, a pair of strings $(\\vx, \\vy) \\in \\mathcal{L}(\\gT)$ if $\\gT$ transduces $\\vx$ to $\\vy$.\n",
     "\n",
     "---\n",
     "\n",
