--- a/notebooks/advanced_operations.ipynb
+++ b/notebooks/advanced_operations.ipynb
@@ -582,7 +582,7 @@
     "\n",
     "---\n",
     "\n",
-    "### Shortest Distance (aside)\n",
+    "### Aside: Shortest Distance\n",
     "\n",
     "In some descriptions of weighted automata, the forward and Viterbi score are introduced as shortest distance algorithms under a respective semiring. The forward score corresponds to the log semiring and the Viterbi score corresponds to the tropical semiring. This is a more general perspective, and useful if you intend to use other semirings. However, we only need the log and tropical semirings in all of the applications we study, so we will restrict the description to the more specific forward and Viterbi score.\n",
     "\n",
