--- a/notebooks/extended_examples.ipynb
+++ b/notebooks/extended_examples.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "8e1fbd0d",
    "metadata": {},
    "outputs": [
@@ -365,8 +365,9 @@
     "  </div>\n",
     "</div>\n",
     "\n",
-    "## $n$-gram Language Model\n",
-    "$\\DeclareMathOperator*{\\LSE}{\\textrm{LSE}}$In this example we'll encode an $n$-gram language model as an acceptor. We'll then use the acceptor to compute the language model probability of a given sequence.\n",
+    "## <a name=\"ngrams\"></a>$n$-gram Language Model\n",
+    "$\\DeclareMathOperator*{\\LSE}{\\textrm{LSE}}$\n",
+    "In this example we'll encode an $n$-gram language model as an acceptor. We'll then use the acceptor to compute the language model probability of a given sequence.\n",
     "\n",
     "Let's start with a very simple example. Suppose we have the token set $\\{a, b, c, \\textrm{</s>}\\}$ and we want to construct a unigram langauge model. Note  $\\textrm{</s>}$ is the end of sentence token and is required for the language model to be a valid probability distribution. Given counts of occurrences for each token in the vocabulary, we can construct an acceptor to represent the unigram language model. Suppose we are given the log probabilities $0.5$, $0.2$, and $0.3$ for $a$, $b$, and $c$ respectively. The corresponding unigram graph is shown below. Note the edge weights are the log probabilities.\n",
     "\n",
@@ -453,7 +454,7 @@
     "\n",
     "---\n",
     "\n",
-    "### Example\n",
+    "### <a name=\"ngram_example\"></a>Example\n",
     "\n",
     "Compute the number of states and arcs in a graph representation of an $n$-gram language model for a given order $n$ and a token set size of $v$.\n",
     "\n",
@@ -467,8 +468,13 @@
     "\\newcommand{\\vx}{{\\bf x}}\n",
     "\\newcommand{\\vy}{{\\bf y}}\n",
     "\\newcommand{\\gA}{\\mathcal{A}}\n",
+    "\\newcommand{\\gB}{\\mathcal{B}}\n",
     "\\newcommand{\\gE}{\\mathcal{E}}\n",
+    "\\newcommand{\\gT}{\\mathcal{T}}\n",
+    "\\newcommand{\\gY}{\\mathcal{Y}}\n",
     "\\newcommand{\\gZ}{\\mathcal{Z}}\n",
+    "\\newcommand{\\sos}{\\textrm{<s>}}\n",
+    "\\newcommand{\\eos}{\\textrm{</s>}}\n",
     "$\n",
     "In speech recognition and other problems, we often need to compute a conditional probability of an output sequence given an input sequence when the two sequences do not have the same length. The Automatic Segmentation criterion (ASG) is one of several common loss functions for which this is possible. However, ASG is limited to the case when the output sequence is no longer than the input sequence. \n",
     "\n",
@@ -485,7 +491,7 @@
     "Let $\\gA_{\\mX,\\vy}$ denote the set of all possible alignments between $\\mX$ and $\\vy$. We can then use the individual alignment scores to compute a conditional probability of the output $\\vy$ given the input $\\mX$:\n",
     "\n",
     "$$\n",
-    "\\log p(\\vy \\mid \\mX) = \\sum_{\\va \\in \\gA_{\\mX, \\vy}} e^{s(\\va)} - \\log Z.\n",
+    "\\log p(\\vy \\mid \\mX) = \\LSE_{\\va \\in \\gA_{\\mX, \\vy}} s(\\va) - \\log Z.\n",
     "$$\n",
     "\n",
     "The normalization term $Z$ is given by:\n",
@@ -527,25 +533,25 @@
     "  </div>\n",
     "</div>\n",
     "\n",
-    "Let's turn to the set $\\gA_{\\mX, \\vy}$ which we will also represent as an acceptor. This acceptor should have a path for every possible alignment between $\\bX$ and $\\vy$. We'll construct $\\gA_{\\mX, \\vy}$ in two steps. First, we can encode the set of allowed alignments of arbitrary length for a given sequence $\\vy$ with a graph, $\\gA_\\vy$. For example, for the sequence $ab$ the graph $\\gA_\\vy$ is shown below."
+    "Let's turn to the set $\\gA_{\\mX, \\vy}$ which we will also represent as an acceptor. This acceptor should have a path for every possible alignment between $\\mX$ and $\\vy$. We'll construct $\\gA_{\\mX, \\vy}$ in two steps. First, we can encode the set of allowed alignments of arbitrary length for a given sequence $\\vy$ with a graph, $\\gA_\\vy$. For example, for the sequence $ab$ the graph $\\gA_\\vy$ is shown below."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "1d348a09",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ay = gtn.Graph()\n",
-    "ay.add_node(start=True)\n",
-    "ay.add_node()\n",
-    "ay.add_node(accept=True)\n",
-    "ay.add_arc(src_node=0, dst_node=0, label=0)\n",
-    "ay.add_arc(src_node=0, dst_node=1, label=0)\n",
-    "ay.add_arc(src_node=1, dst_node=1, label=1)\n",
-    "ay.add_arc(src_node=1, dst_node=2, label=1)\n",
-    "gtn.draw(ay, \"figures/nb/asg_alignments.svg\", isymbols=symbols)"
+    "AY = gtn.Graph()\n",
+    "AY.add_node(start=True)\n",
+    "AY.add_node()\n",
+    "AY.add_node(accept=True)\n",
+    "AY.add_arc(src_node=0, dst_node=0, label=0)\n",
+    "AY.add_arc(src_node=0, dst_node=1, label=0)\n",
+    "AY.add_arc(src_node=1, dst_node=1, label=1)\n",
+    "AY.add_arc(src_node=1, dst_node=2, label=1)\n",
+    "gtn.draw(AY, \"figures/nb/asg_alignments.svg\", isymbols=symbols)"
    ]
   },
   {
@@ -567,13 +573,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "ac917f10",
    "metadata": {},
    "outputs": [],
    "source": [
-    "axy = gtn.intersect(ay, E)\n",
-    "gtn.draw(axy, \"figures/nb/asg_constrained.svg\", isymbols=symbols)"
+    "AXY = gtn.intersect(AY, E)\n",
+    "gtn.draw(AXY, \"figures/nb/asg_constrained.svg\", isymbols=symbols)"
    ]
   },
   {
@@ -596,37 +602,235 @@
     "p(\\vy \\mid \\mX) = \\LSE(\\gA_\\vy \\circ \\gE) - \\LSE(\\gE)\n",
     "$$\n",
     "\n",
+    "---\n",
+    "\n",
+    "### Aside: Global or Local Normalization\n",
+    "\n",
+    "The equation for the ASG criterion is *globally normalized*. The term $Z$ is the global normalization term and it ensure that the conditional probability $p(\\vy \\mid \\mX)$ is a valid distribution; that is it sums to one over $\\vy$. The global normalization term $Z$ (also known as the partition function) is often the most expensive part of the loss to compute.\n",
+    "\n",
+    "In some cases the global normalization can be avoided by using a *local normalization*. For example, in the version of ASG presented above, the path score for $\\va$ decomposes into a separate score for each time-step. In this case, we can compute the exact some loss by normalizing the scores $s_t(y)$ at each time-step and dropping the global normalizer $Z$. Concretely, we compute the normalized scores at each time-step:\n",
+    "\n",
+    "$$\n",
+    "p_t(y) = \\frac{e^{s_t(y)}}{\\sum_z e^{s_t(z)}}.\n",
+    "$$\n",
+    "\n",
+    "We then replace the unnormalized scores with the log-normalized scores when computing the score for an alignment:\n",
+    "\n",
+    "$$\n",
+    "\\log p(\\va) = \\sum_{t=1}^T \\log p_t(a_t)\n",
+    "$$\n",
+    "\n",
+    "As a last step, we remove the global normalization term $Z$ from the loss function, but leave it otherwise unchanged:\n",
+    "\n",
+    "$$\n",
+    "\\log p(\\vy \\mid \\mX) = \\LSE_{\\va \\in \\gA_{\\mX, \\vy}} \\log p(\\va)\n",
+    "$$\n",
+    "\n",
+    "In the version which uses graph operations, we use the log-normalized scores $\\log p_t(y)$ for the arc weights on the emissions graph $\\gE$. The graph based loss function then simplifies to: \n",
+    "\n",
+    "$$\n",
+    "p(\\vy \\mid \\mX) = \\LSE(\\gA_\\vy \\circ \\gE)\n",
+    "$$\n",
+    "\n",
+    "We can prove that this locally normalized version of the ASG loss is equivalent to the globally normalized version. Specifically we'd like to show that:\n",
+    "\n",
+    "$$\n",
+    "\\LSE_{\\va \\in \\gA_{\\mX, \\vy}} \\log p(\\va) = \\LSE_{\\va \\in \\gA_{\\mX, \\vy}} s(\\va) - \\log Z\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "p(\\va) = \\sum_{t=1}^T \\frac{e^{s_t(a)}}{\\sum_z e^{s_t(z)}}\n",
+    "$$\n",
+    "\n",
+    "---\n",
+    "\n",
     "### Transitions\n",
     "\n",
-    "The original ASG loss function also includes bigram transition scores. If we let $h(a_{t-1}, a_t)$ denote the transition function, then we can incorporate the transition score into the score of the alignment:\n",
+    "The original ASG loss function also includes bigram transition scores. We can include transitions scores, $h(a_{t-1}, a_t)$, in the score for an alignment:\n",
     "\n",
     "$$\n",
     "s(\\va) = \\sum_{t=1}^T s_t(a_t) + h(a_t, a_{t-1})\n",
     "$$\n",
     "\n",
-    "where we assume $a_0$ is a special start of sequence token $\\textrm{<s>}$. We can use the alignment scores in the same manner as above and the rest of the loss function remains unchanged. \n",
+    "where $a_0$ is a special start of sequence token $\\textrm{<s>}$. We can use the alignment scores in the same manner as above and the rest of the loss function remains unchanged. \n",
     "\n",
-    "We'll next show how to incorporate transitions using an acceptor and graph operations. I'll rely on the ideas introduced in the section on $n$-gram langauge models, so now is a good time to read or review that section. The first step is to encode the bigram model as a graph as shown below:\n",
+    "Let's next see how to incorporate transitions using an acceptor and graph operations. I'll rely on the ideas introduced in the section on [$n$-gram langauge models](#ngrams), so now is a good time to review that section. The first step is to encode the bigram model as a graph as shown below:\n",
     "\n",
     "<div class=\"figure\">\n",
     "  <div class=\"img\">\n",
     "    <img src=\"figures/nb/asg_bigrams.svg\"/>\n",
     "  </div>\n",
     "  <div class=\"caption\" markdown=\"span\">\n",
+    "    The acceptor represents a bigram transition model for the token set $\\{a, b, c\\}$ (the arc weights are not shown). Each path begins in the start state denoted by the start-of-sequence symbol $\\sos$.\n",
+    "  </div>\n",
+    "</div>\n",
+    "\n",
+    "To incorporate transition scores for the output sequence, we intersect the bigram graph $\\gB$ with the output alignment graph $\\gA_\\vy$. To incorporate transition scores in the normalization term $Z$, we intersect $\\gB$ with the emissions graph $\\gE$. The loss function using graph operations including transitions becomes:\n",
+    "\n",
+    "$$\n",
+    "p(\\vy \\mid \\mX) = \\LSE(\\gB \\circ \\gA_\\vy \\circ \\gE) - \\LSE(\\gB \\circ \\gE)\n",
+    "$$\n",
+    "\n",
+    "We see here an example of the expressive power of a graph-based implementation of the loss function. In a non-graph based implementation of ASG, the use of a bigram transition function is hard-coded. In the graph-based version, the transition model $\\gB$ could be a unigram, trigram, or otherwise arbitrary $n$-gram. Of course, the size of the transition graph increases rapidly with the order $n$ and the size of the token set (see the $n$-gram [example](#ngram_example)). This causes problems with both sample and computational efficiency. Thus, in practice ASG is used with a bigram transition model and token sets sizes rarely than a hundred.\n",
+    "\n",
+    "The arc weights on the transition graph (the scores $h(a_t, a_{t-1})$), are typically parameters of the model and learned directly. This means we need to compute the gradient of the ASG loss with respect to these scores. These derivatives are straightforward to compute in a framework with automatic differentiation.\n",
+    "\n",
+    "A complete implementation of the ASG loss function which takes as input an emissions graph $\\gE$, a transitions graph $\\gB$, and an output alignment graph $\\gA_\\vy$ is shown below. I'd like to make three observations about this code: \n",
+    "\n",
+    "1. The implementation is concise. Given the appropriate graph inputs, the complete loss function requires only eight short lines using ten function calls. \n",
+    "2. The code should look familiar to users of tensor-based frameworks like PyTorch. Other than the different operation names, the imperative style and gradient computation is no different with graphs than it is with tensors. \n",
+    "3. The code is generic. For example, we can use a trigram model for the input graph `B` without needing to change the function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "4d3d5cd3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The ASG loss is 7.013.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def ASG(E, B, AY):\n",
+    "    # Compute constrained and normalization graphs:\n",
+    "    AXY = gtn.intersect(gtn.intersect(B, AY), E)\n",
+    "    ZX = gtn.intersect(B, E)\n",
+    "    \n",
+    "    # Forward both graphs:\n",
+    "    AXY_score = gtn.forward_score(AXY)\n",
+    "    ZX_score = gtn.forward_score(ZX)\n",
+    "    \n",
+    "    # Compute the loss:\n",
+    "    loss = gtn.negate(gtn.subtract(AXY_score, ZX_score))\n",
+    "    \n",
+    "    # Clear the previous gradients:\n",
+    "    E.zero_grad()\n",
+    "    B.zero_grad()\n",
+    "    \n",
+    "    # Compute gradients:\n",
+    "    gtn.backward(loss, retain_graph=False)\n",
+    "\n",
+    "    return loss.item()\n",
+    "\n",
+    "# Make the bigram transition graph for the token set\n",
+    "# {a, b, c} with gradient computation enabled:\n",
+    "B = gtn.Graph(calc_grad=True)\n",
+    "B.add_node(start=True, accept=True)\n",
+    "B.add_node(accept=True)\n",
+    "B.add_node(accept=True)\n",
+    "B.add_node(accept=True)\n",
+    "for i in range(4):\n",
+    "    for j in range(3):\n",
+    "        B.add_arc(src_node=i, dst_node=(j + 1), label=j)\n",
+    "        \n",
+    "# Call the ASG loss:\n",
+    "loss = ASG(E, B, AY)\n",
+    "print(f\"The ASG loss is {loss:.3f}.\")\n",
+    "\n",
+    "# Access the graph containing the gradient for B:\n",
+    "dB = B.grad()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "281e2858",
+   "metadata": {},
+   "source": [
+    "### ASG with Transducers\n",
+    "\n",
+    "As a final step, I'll show how to construct the ASG criterion from even simpler transducer buildling blocks. The advantage of this approach is that it lets us easily experiment with changes to the criterion at an even deeper level.\n",
+    "\n",
+    "Our goal is to compute $\\gA_\\vy$ from simpler graphs instead of hard-coding its structure directly. We'll use a ta token graph\n",
+    "- TODO explain how we will compute A from the tokens and the label graph\n",
+    "\n",
+    "As a first step, we encode the assumption that each token in an output maps to one or more repeats of the same token in an alignment. For example for the output $ab$ and alignment $aaaabb$ the token $a$ maps to $aaaa$ and $b$ maps to  $bb$. For the token $a$, we can construct the token graph $\\gT_a$ shown below which has the desired property."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "fea93594",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Ta = gtn.Graph()\n",
+    "Ta.add_node(start=True)\n",
+    "Ta.add_node(accept=True)\n",
+    "Ta.add_arc(src_node=0, dst_node=1, label=0)\n",
+    "Ta.add_arc(src_node=1, dst_node=1, ilabel=0, olabel=gtn.epsilon)\n",
+    "\n",
+    "gtn.draw(Ta, \"figures/nb/asg_tokens_a.svg\", isymbols=symbols, osymbols=symbols)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18575255",
+   "metadata": {},
+   "source": [
+    "<div class=\"figure\">\n",
+    "  <div class=\"img\">\n",
+    "    <img src=\"figures/nb/asg_tokens_a.svg\"/>\n",
+    "  </div>\n",
+    "  <div class=\"caption\" markdown=\"span\">\n",
     "    TODO\n",
     "  </div>\n",
     "</div>\n",
     "\n",
+    "Since an output sequence can consist of any sequence of tokens from the token set, we construct a complete token graph $\\gT$ by taking the union of the individual token graphs and computing the closure. If we have a token set $\\{a, b, c\\}$, then we construct individual token graphs $\\gT_a$, $\\gT_b$, and $\\gT_c$. The complete token graph $\\gT$ is given by $\\gT = (\\gT_a + \\gT_b + \\gT_c)^*$.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "293071be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make all the individual token graphs\n",
+    "Tinds = []\n",
+    "for i in range(3):\n",
+    "    Tind = gtn.Graph()\n",
+    "    Tind.add_node(start=True)\n",
+    "    Tind.add_node(accept=True)\n",
+    "    Tind.add_arc(src_node=0, dst_node=1, label=i)\n",
+    "    Tind.add_arc(src_node=1, dst_node=1, ilabel=i, olabel=gtn.epsilon)\n",
+    "    Tinds.append(Tind)\n",
     "\n",
-    "### ASG with Transducers\n",
+    "T = gtn.closure(gtn.union(Tinds))\n",
+    "gtn.draw(T, \"figures/nb/asg_tokens.svg\", isymbols=symbols, osymbols=symbols)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4dd216a8",
+   "metadata": {},
+   "source": [
+    "<div class=\"figure\">\n",
+    "  <div class=\"img\">\n",
+    "    <img src=\"figures/nb/asg_tokens.svg\"/>\n",
+    "  </div>\n",
+    "  <div class=\"caption\" markdown=\"span\">\n",
+    "    TODO\n",
+    "  </div>\n",
+    "</div>\n",
     "\n",
-    "As a final step, I'll show how to construct the ASG criterion from even simpler transducer buildling blocks. The advantage of this approach is that it lets us experiment with changes to the criterion\n"
+    "Next steps\n",
+    "- construct $\\gY$.\n",
+    "- construct $\\gA_Y$ from $\\gT$ and $\\gY$\n",
+    "- from here everything is the same"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4861013",
+   "id": "1d665a0f",
    "metadata": {},
    "outputs": [],
    "source": []
